# insider

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
insider/: manage.py  words_en.txt  words_es.txt
insider/game/: game_utils.py  models.py  urls.py  views.py
insider/game/management/commands/: import_dictionary.py
insider/game/migrations/: 0001_initial.py  0002_rename_words_word.py
insider/game/templates/: hide_word.html  home.html  show_word.html
insider/insider/: asgi.py  settings.py  urls.py  wsgi.py
