[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insider"
version = "1"
dependencies = [
	"django"
]

[project.optional-dependencies]
dev = [
	"boto3",
	"pip-tools",
	"pyright",
	"pytest",
	"ruff",
]

[tool.pytest.ini_options]
python_files = ["test*.py", "*test.py", "*test*.py"]
testpaths = [
	"src/"
]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "SIM", "Q", "TRY", "N", "ASYNC", "A", "FIX", "R", "LOG"]


[tool.ruff]
line-length = 160
output-format = "grouped"


